# Algebraic-Reasoning-Distiller

./: .env.dgx  .gitignore  README.md  neurips_2025_en.tex  neurips_2025_es.tex  pyproject.toml
api/: app.py
container/: Dockerfile  conectar.sh  docker-compose.yaml  down.sh  requirements.txt  up.sh
data/: cheatsheets.json  hard.json  hard2.json  hard3.json  models.json  normal.json
playground/: index.html  script.js  styles.css
report/: main.tex  neurips_2025.sty  references.bib
report/misc/: problems_ablation_study.txt
sair/: README.md  __init__.py  config.py  equations.py  graph.py  magma.py  schemas.py  train_grpo_distiller.py  train_sft_distiller.py
sair/agents/: __init__.py  counterexample.py  distiller.py  evaluator.py  prover.py  retriever.py
sair/cheat_sheets/: baseline_cheatsheet.txt  cheatsheet_1.txt  final_cheatsheet.txt  neither_symbolic_or_counterexamples.txt  no_counter_model.txt  no_symbolic_true.txt
sair/data/: __init__.py  build_training_dataset.py  ingest_equations.py  load_problems.py
sair/data/competition/: hard.txt  hard2.txt  hard3.txt  normales.txt
sair/data/problems/: hard3_72.jsonl
sair/scripts/: __init__.py  demo_agents.py  evaluate_cheat_sheet.py  generate_cheat_sheet.py  parse_competition_problems.py
slides/: main.tex
slides_catellano/: main.tex
utils/: paths.py
