[project]
name = "algebraic-reasoning-distiller"
version = "1.0.0"
description = "Multi-agent pipeline for equational theory reasoning — SAIR Stage 1 competition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Deep learning core ---
    "torch>=2.1.0,<3.0.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.41.0",
    "peft>=0.7.0",
    "trl>=0.7.10",
    "datasets>=2.14.0",

    # --- HuggingFace hub (model download) ---
    "huggingface-hub[cli]>=0.36.0",

    # --- LangChain / LangGraph (multi-agent + RAG) ---
    "langchain>=0.1.0",
    "langchain-community>=0.4.1",
    "langgraph>=0.2.0",

    # --- Vector store + embeddings ---
    "chromadb>=0.4.22",
    "sentence-transformers>=2.5.0",

    # --- FastAPI server ---
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.21",

    # --- Data validation ---
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sair", "api", "utils"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
